Checkpoint work to git

--- a/content/content/lectures/part2/30_architecting_for_scale.md.erb
+++ b/content/content/lectures/part2/30_architecting_for_scale.md.erb
@@ -1,7 +1,7 @@
 ---
 title: Introduction to Scale
 desc: What does scalability mean? How is it different from Performance? What do scalbility problems look like?
-homework: 1) Study SODRR Chapter 4 in depth, submit warmup questions in Latte; 2) Complete work on nanoTwitter 0.2
+homework: 1) Read about Scalability and Design in Sinatra; 2) Complete work on nanoTwitter 0.2
 cat: scale
 ---
 <%= homework_hdr %>
@@ -10,7 +10,7 @@ cat: scale
 
 ##### Ongoing work
 
-1. <%= partbadge %> <%= codebadge %> **Complete nt 0.2 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
+* <%= partbadge %> <%= codebadge %> **Complete nt 0.2 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable "Github repo zipped up." %>
 
 #### Discussion
 * Review How to do Authentication in Sinatra (see <%= link_to_topic :nt_outline %>)
