--- a/content/content/lectures/part2/35_web_services.md.erb
+++ b/content/content/lectures/part2/35_web_services.md.erb
@@ -5,7 +5,6 @@ homework: 2) Read about REST and respond to warmups; 2) Based on reading about r
 cat: nt
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Code | <%=zipbadge %>: Zipped
 
 1. <%= partbadge %> <%= timebadge %> **REST API Best Practices** Read this article. It's long but important: [Best Practices for Designing a Pragmatic RESTful API](http://www.vinaysahni.com/best-practices-for-a-pragmatic-restful-api). Here are some warmup questions to think about:
     * The PUT http verb and the POST http verb sound very similar. Can you explain the difference? Include an example from nanoTwitter of where each would be appropriate, and explain why. (Beware this is a question that trips up even experienced web engineers!)
@@ -13,7 +12,7 @@ cat: nt
     * In the context of REST APIs, what is pagination? Why would you say that pagination is a concern, and can you give some scenarios where it becomes a concern?
     * Please mention one or two concepts or topics from this reading that you didn't follow or would like to learn more about.
     * <%= deliverable "Respond to the warmups in Latte." %>
-1. <%= codebadge %> **Web Services APIs** Examine the nt Web Services (REST) API routes from <%= link_to_topic :nt_functionality %>. You will see that the general pattern is laid out, but not all permutations are explained. Evaluate them in the context of this reading. You're welcome to improve them so they follow more pragmatic REST principles.
+1. <%= teambadge %> **Web Services APIs** Examine the nt Web Services (REST) API routes from <%= link_to_topic :nt_functionality %>. You will see that the general pattern is laid out, but not all permutations are explained. Evaluate them in the context of this reading. You're welcome to improve them so they follow more pragmatic REST principles.
 
     Now, write "REST API Documentation" for the nanoTwitter service api. Look for examples on the web for how web APIs are documented for what you think is a good format. (Here's what twitter does as an example: [Twitter statuses API](https://dev.twitter.com/rest/reference/get/statuses/retweets_of_me).
 
