--- a/content/content/lectures/part3/01_scaling_twitter.md.erb
+++ b/content/content/lectures/part3/01_scaling_twitter.md.erb
@@ -6,16 +6,18 @@ desc: We begin examining how we would measure and detect scaling problems in nan
 cat: scale
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Code
 
 1. <%= pdfbadge %> **Reading and Watching:** As you read the article and watch the video try to figure out what some of the reasons are for failures in software projects. Are they failings of human nature or failings of science and methodology? Do the authors believe that in the future failure due to software will eventually be eliminated? How do those lessons apply to what happened with the original healthcare.gov web site? Were the problems fundamental computer science related or were they caused by easily avoided human error? Do you think software systems like that are fundamentally more complex and in fact exceed the ability of any individual to grasp? What are the two or three big lessons that you think would be important for any Software Engineer to learn?
     * Read [R.Charette, “Why Software Fails - IEEE Spectrum.”](http://bit.ly/1x5YG1n)
     * Watch [Healthcare.gov failure: Analysis and discussion](http://youtu.be/Rl5WFz6Gi28) ([also available here...](http://www.frequency.com/video/cs169-v13-w8l2s7/132108449))
     * <%= deliverable "Write a one or two page response to the questions I posed above. Support your arguments with references to the paper or other sources." %>
-1. <%= partbadge %> <%= codebadge %> **Complete nt 0.3 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
-#### Interesting, not required, reading
+##### Interesting, not required, reading
 * [How Good Is Your Test Suite](https://www.codementor.io/lmuzinic/how-good-is-your-test-suite-g93tx6qot?utm_content=posts&utm_source=sendgrid&utm_medium=email&utm_term=post-g93tx6qot&utm_campaign=newsletter20180307)
+
+##### Ongoing work
+
+* <%= partbadge %> <%= zipbadge %> <%= teambadge %> **Complete nt 0.3 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### What does scaling mean for nanoTwitter?
 * What kinds of activities will likely demonstrate a scale problem?
