Checkpoint work to git

--- a/content/content/lectures/part2/35_web_services.md.erb
+++ b/content/content/lectures/part2/35_web_services.md.erb
@@ -5,7 +5,6 @@ homework: 2) Read about REST and respond to warmups; 2) Based on reading about r
 cat: nt
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Code | <%=zipbadge %>: Zipped
 
 1. <%= partbadge %> <%= timebadge %> **REST API Best Practices** Read this article. It's long but important: [Best Practices for Designing a Pragmatic RESTful API](http://www.vinaysahni.com/best-practices-for-a-pragmatic-restful-api). Here are some warmup questions to think about:
     * The PUT http verb and the POST http verb sound very similar. Can you explain the difference? Include an example from nanoTwitter of where each would be appropriate, and explain why. (Beware this is a question that trips up even experienced web engineers!)
@@ -24,6 +23,7 @@ cat: nt
 
 ##### Interesting, not mandatory, reading
 * [So What's This GraphQL thing I keep hearing about?](https://medium.freecodecamp.org/so-whats-this-graphql-thing-i-keep-hearing-about-baf4d36c20cf)
+* [GraphpQL in Ruby](https://blog.appsignal.com/2019/01/29/graphql.html)
 * [Anatomy of a GraphQL query](https://dev-blog.apollodata.com/the-anatomy-of-a-graphql-query-6dffa9e9e747)
 * [Sinatra GraphQL example](https://github.com/robinjmurphy/ruby-graphql-server-example)
 
