--- a/content/content/intro/50_links_resources.md.erb
+++ b/content/content/intro/50_links_resources.md.erb
@@ -10,10 +10,12 @@ Here are various resources that will come in handy during this class.
 
 * Teaching Assistant: Chi Zang - chizhang@brandeis.edu
 
+#### Key pages on this site
+* <%= link_to_topic :sinatra_technology_options %>
+
 #### Sinatra
 * [Minitest/Spec](https://github.com/seattlerb/minitest)
 * [Sinatra Testing](http://sinatrarb.com/testing.html)
 * [Sinatra ActiveRecord Extension](https://github.com/janko-m/sinatra-activerecord)
 * [ActiveRecord Basics Guide](https://edgeguides.rubyonrails.org/active_record_basics.html)
 * [ActiveRecord Migration Guide](https://edgeguides.rubyonrails.org/active_record_migrations.html)
-
