Checkpoint work to git

--- a/content/content/lectures/part2/35_web_services.md.erb
+++ b/content/content/lectures/part2/35_web_services.md.erb
@@ -30,6 +30,9 @@ cat: nt
 ##### Ongoing work
 * **Teams continue to work on nanoTwitter**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
+#### Tech Presentations
+<%= callout("Presentation", " Brad will present about NodeJS - with express, compared with Sinatra") %>
+
 <%= include_topic :rest_web_services %>
 
 #### Next Class
