--- a/content/content/lectures/part3/01_scaling_twitter.md.erb
+++ b/content/content/lectures/part3/01_scaling_twitter.md.erb
@@ -19,6 +19,9 @@ cat: scale
 
 * <%= partbadge %> <%= zipbadge %> <%= teambadge %> **Complete nt 0.3 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
+#### Tech Presentations
+<%= callout("Presentation", "Liaman will present about Fat Client architectures - React") %>
+
 #### What does scaling mean for nanoTwitter?
 * What kinds of activities will likely demonstrate a scale problem?
 * Why would each of these possibly challenge scalability?
