--- a/content/content/lectures/part3/30_scl_cache.md.erb
+++ b/content/content/lectures/part3/30_scl_cache.md.erb
@@ -16,6 +16,9 @@ cat: scale
 * [Amazon Elastic Cache](http://aws.amazon.com/elasticache/)
 * [Sinatra Cache](https://github.com/kematzy/sinatra-cache)
 
+#### Tech Presentation
+<%= callout("Presentation", " Ye will present about NoSQL Databases - MongoDB") %>
+
 #### Discussion
 * Decide on Tech Pres schedule
 
