--- a/content/content/lectures/part3/35_scl_db.md.erb
+++ b/content/content/lectures/part3/35_scl_db.md.erb
@@ -22,6 +22,9 @@ cat: scale
 * [Sharding your database](http://www.craigkerstiens.com/2012/11/30/sharding-your-database/)
 * [Gem for Sharding](https://github.com/thiagopradi/octopus)
 
+#### Tech Presentations
+<%= callout("Presentatoin", " Fengzhencheng Zeng will present about Containerizing - Docker")%>
+
 #### Notes and Discussion
 * How is nT 0.5 going? Any obstacles or questions?
 * What to do if "there's not a lot of coding for me to do?!"
