--- a/content/content/lectures/part3/45_scl_queues.md.erb
+++ b/content/content/lectures/part3/45_scl_queues.md.erb
@@ -23,7 +23,7 @@ cat: scale
 
 
 #### Tech Presentation
-<%= callout("Presentation", " TBD") %>
+<%= callout("Presentation", " Xiangran Zhao on Full Text Search - ElasticSearch") %>
 
 ### Scalability Pattern: Queueing
 
