--- a/content/content/lectures/part3/55_scl_logging.md.erb
+++ b/content/content/lectures/part3/55_scl_logging.md.erb
@@ -10,6 +10,7 @@ cat: scale
 
 #### Tech Presentation
 
-<%= callout("Presentation", " TBD") %>
+<%= callout("Presentation", " Yang Shang	API Architectures other than REST - GraphQL") %>
+
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
