--- a/content/content/lectures/part3/60_scl_containers.md.erb
+++ b/content/content/lectures/part3/60_scl_containers.md.erb
@@ -8,6 +8,6 @@ cat: scale
 
 #### Tech Presentation
 
-<%= callout("Presentation", " TBD") %>
+<%= callout("Presentation", " Ziyu Liu on	Alternate ORMs - Sequel gem") %>
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
