--- a/content/content/lectures/part4/01_cloud_deployment.md.erb
+++ b/content/content/lectures/part4/01_cloud_deployment.md.erb
@@ -24,7 +24,7 @@ cat: scale
 
 #### Tech Presentation
 
-<%= callout("Tech Pres",  " Team 404 will teach us about DB Partitioning and Sharding" ) %>
+<%= callout("Tech Pres",  " Ari Carr	Database Sharding and Paritioning - ActiveRecord v6" ) %>
 
 <%= include_topic :continuous_integ_deployment %>
 
