--- a/content/content/lectures/part4/03_good_programming_practices.md.erb
+++ b/content/content/lectures/part4/03_good_programming_practices.md.erb
@@ -18,7 +18,7 @@ cat: software design
 
 #### Tech Presentation
 
-<%= callout("Tech Pres",  " Team Skoozy will teach us about Services and Load Balancing" ) %>
+<%= callout("Tech Pres",  " Yirun Zhou on Global Scaling Architectures" ) %>
 
 <%= include_topic :good_programming %>
 <%= include_topic :code_smells %>
