--- a/content/content/lectures/part3/25_tuning_scale.md.erb
+++ b/content/content/lectures/part3/25_tuning_scale.md.erb
@@ -19,6 +19,8 @@ cat: scale
 ##### Ongoing work
 * **Teams continue to work on nanoTwitter 0.4**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
+#### Tech Presentations
+<%= callout("Presentation", " Julian will present about Graph Databases - dgraph, Amazon Neptune, Neo4J") %>
 
 #### Discussion
 * Lets look at some of your diagrams. Who wants to volunteer?
