--- a/content/content/lectures/part3/40_scl_concur.md.erb
+++ b/content/content/lectures/part3/40_scl_concur.md.erb
@@ -22,8 +22,7 @@ cat: scale
 * [Nobody Understands the GIL](https://www.jstorimer.com/blogs/workingwithcode/8085491-nobody-understands-the-gil)
 
 #### Technical Presentation
-
-<%= callout("Presentation", " TBD") %>
+<%= callout("Presentation", " Aaron presents about Client programming languages - Elm") %>
 
 <%= include_topic :scaling_concur %>
 <%= include_topic :scaling_async %>
