Checkpoint work to git

--- a/content/content/lectures/part3/45_scl_queues.md.erb
+++ b/content/content/lectures/part3/45_scl_queues.md.erb
@@ -19,7 +19,7 @@ cat: scale
 * [RabbitMQ Tutorial](https://www.rabbitmq.com/tutorials/tutorial-one-ruby.html)
 * [Rabbit Demo (github)](https://github.com/Cosi-105/rabbit_demo)
 * [Ruby Concurrency Explained](http://merbist.com/2011/02/22/concurrency-in-ruby-explained/)
-* [Rabbit MA and Kafka](https://karolgalanciak.com/blog/2019/02/24/messages-on-rails-part-1-introduction-to-kafka-and-rabbitmq/)
+* [Rabbit MQ and Kafka](https://karolgalanciak.com/blog/2019/02/24/messages-on-rails-part-1-introduction-to-kafka-and-rabbitmq/)
 
 
 #### Tech Presentation
