--- a/content/content/lectures/part3/01_scaling_twitter.md.erb
+++ b/content/content/lectures/part3/01_scaling_twitter.md.erb
@@ -20,7 +20,12 @@ cat: scale
 * <%= partbadge %> <%= zipbadge %> <%= teambadge %> **Complete nt 0.3 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### Tech Presentations
-<%= callout("Presentation", "Liaman will present about Fat Client architectures - React") %>
+<%= callout("Presentation", " Liaman will present about Fat Client architectures - React") %>
+
+#### General Notes on Review of nt0.x
+* There should be a test/ directory with tests written prefarably in Minitest although RSpec is ok too
+* We will try and run your test, so make sure your readme gives instructions if they are anything other than `rake test`
+* Remember the change history in your Readme with team members' contribution, who worked on what. 
 
 #### What does scaling mean for nanoTwitter?
 * What kinds of activities will likely demonstrate a scale problem?
