Checkpoint work to git

--- a/content/content/lectures/part3/30_scl_cache.md.erb
+++ b/content/content/lectures/part3/30_scl_cache.md.erb
@@ -5,22 +5,20 @@ homework: 1) Complete nT 0.4
 cat: scale
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:C
+1. **Read**: [Introduction to Caching and Redis](https://www.codementor.io/brainyfarm/introduction-to-caching-and-redis-h6o16p4qx)
 
-1. **Presentation Topic Proposal** Each team choose a topic for their tech presentations. These are 30 minute presentations done by the team on a a complicated technical topic. See: <%= link_to_topic :tech_pres %> for more details. Be ready to make your proposal in class today so we can sort out the schedule.
-1. <%= partbadge %> <%= codebadge %> **Complete nt 0.4 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
-
-#### Valuable, not required, reading
+##### Valuable, not required, reading
 * [Redis](http://redis.io)
 * [Memcached](http://memcached.org)
 * [Amazon Elastic Cache](http://aws.amazon.com/elasticache/)
 * [Sinatra Cache](https://github.com/kematzy/sinatra-cache)
+* [Twitter Clone using Redis](https://redis.io/topics/twitter-clone) ([code](https://github.com/danlucraft/retwis-rb))
+
+##### Ongoing work
+* **Teams Complete and submit nanoTwitter 0.4**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 #### Tech Presentation
 <%= callout("Presentation", " Ye will present about NoSQL Databases - MongoDB") %>
-
-#### Discussion
-* Decide on Tech Pres schedule
 
 #### Review: Achieving Scale
 * Measuring performance:
