--- a/content/content/lectures/part3/45_scl_queues.md.erb
+++ b/content/content/lectures/part3/45_scl_queues.md.erb
@@ -1,6 +1,6 @@
 ---
 title: "Scaling Patterns: Queueing"
-homework: 1) Read articles and respond to warmup questions; 2) Complete working on nT 0.6
+homework: 1) Read articles and respond to warmup questions; 2) Continue working on nT 0.7
 desc: Centrality of queuing and message passing concepts in achieving scalable architecture
 cat: scale
 ---
@@ -21,6 +21,8 @@ cat: scale
 * [Ruby Concurrency Explained](http://merbist.com/2011/02/22/concurrency-in-ruby-explained/)
 * [Rabbit MQ and Kafka](https://karolgalanciak.com/blog/2019/02/24/messages-on-rails-part-1-introduction-to-kafka-and-rabbitmq/)
 
+##### Ongoing work
+* **Teams continue to work on nanoTwitter 0.7**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 #### Tech Presentation
 <%= callout("Presentation", " Xiangran Zhao on Full Text Search - ElasticSearch") %>
