--- a/content/content/lectures/part3/50_scl_soa.md.erb
+++ b/content/content/lectures/part3/50_scl_soa.md.erb
@@ -1,7 +1,7 @@
 ---
 title: "Scaling Pattern: SOA + µservices"
 desc: Look at applications of microservices and SOA in building scalable systems. Consider risks and benefits.
-homework: 1) Read Parnas Paper; 2) Read Microservices Article and respond to warmups; 3) Continue working on nT 0.8
+homework: 1) Read Parnas Paper; 2) Read Microservices Article and respond to warmups; 3) Complete nT0.7
 cat: scale
 ---
 <%= homework_hdr %>
@@ -19,11 +19,16 @@ cat: scale
 1. **Read**: [Introduction to Architecting Systems for Scale](http://lethain.com/introduction-to-architecting-systems-for-scale/)
 1. **Teams continue to work on nanoTwitter 0.7**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
-#### Userful but not mandatory Reading
+##### Userful but not mandatory Reading
 * [Sinatra/Heroku Microservices](https://silkandspinach.net/2014/08/31/sinatraheroku-microservices/)
 * [Linux Process Management: Commands you should know](http://www.hostingadvice.com/blog/linux-process-management-commands-know/)
 * [Ruby One Liners](https://github.com/learnbyexample/Command-line-text-processing)
 * [Architecting Apps as MicroServices](https://blog.codeship.com/architecting-rails-apps-as-microservices/)
+
+##### Ongoing work
+
+* <%= partbadge %> <%= zipbadge %> <%= teambadge %> **Complete nt 0.7 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
+
 
 #### Tech Presentation
 
