--- a/content/content/lectures/part3/55_scl_logging.md.erb
+++ b/content/content/lectures/part3/55_scl_logging.md.erb
@@ -1,12 +1,14 @@
 ---
 title: "Scaling Pattern: Logging"
 desc: Consider the role of system wide logging 
-homework: 1) TBD
+homework: 1) 
 cat: scale
 ---
 <%= homework_hdr %>
 * Read: https://medium.freecodecamp.org/how-to-save-hours-of-debugging-with-logs-6989cc533370
 
+##### Ongoing work
+* **Teams continue to work on nanoTwitter 0.8**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 #### Tech Presentation
 
