--- a/content/content/lectures/part4/03_good_programming_practices.md.erb
+++ b/content/content/lectures/part4/03_good_programming_practices.md.erb
@@ -18,7 +18,9 @@ cat: software design
 
 #### Tech Presentation
 
-<%= callout("Tech Pres",  " Yirun Zhou on Global Scaling Architectures" ) %>
+#### Tech Presentation
+
+<%= callout("Tech Pres",  " Ari Carr	Database Sharding and Paritioning - ActiveRecord v6" ) %>
 
 <%= include_topic :good_programming %>
 <%= include_topic :code_smells %>
