--- a/content/content/lectures/part4/06_software_engineering.md.erb
+++ b/content/content/lectures/part4/06_software_engineering.md.erb
@@ -13,7 +13,7 @@ cat: software design
 
 #### Tech Presentation
 
-<%= callout("Tech Pres",  " Team 200 will teach us about GraphQL" ) %>
+<%= callout("Tech Pres",  " Yirun Zhou on Global Scaling Architectures" ) %>
 
 #### Great, but not required, readings
 * [“Software Engineering: An Idea whose time has come and gone?](http://www.systemsguild.com/pdfs/tdmsoftwaresummer2009.pdf)
