--- a/content/content/lectures/part4/07_load_testing.md.erb
+++ b/content/content/lectures/part4/07_load_testing.md.erb
@@ -6,9 +6,9 @@ desc: We will test all the nanoTwitters for scalability. This can be fun and cha
 ---
 <%= homework_hdr %>
 
-**Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
-
 1. **Team** Prepare everything so that we can run Loader.io tests in class so we can all see the results you are getting. Refere to <%= link_to_topic :scalability_runoff %>. We will have each team run this in class and see the results. You will be able to see how your nT works relative to the other teams
+
+<%= callout("Tech Pres",  " Team 200 will teach us about GraphQL" ) %>
 
 <%= include_topic :scalability_runoff %>
 
