--- a/content/content/lectures/part3/35_scl_db.md.erb
+++ b/content/content/lectures/part3/35_scl_db.md.erb
@@ -1,11 +1,10 @@
 ---
 title: "Scaling Patterns: DB Tuning"
 desc: Look into how database architecture will affect performance and scale and how to improve it.
-homework: 1) Database partitioning, warmups; 2) Read articles; 3) Continue work on nT 0.5
+homework: 1) Database partitioning, warmups; 2) Read articles; 3) Continue work on nT 0.6
 cat: scale
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
 
 1. <%= pdfbadge %> <%= timebadge %> <%= partbadge %> **Watch and Read and answer warmup questions**: [Basics of Database Sharding](https://youtu.be/W6pFKihvqH4) and [5 Early Lessons from Rapid High Availability Scaling](http://mikepackdev.com/blog_posts/40-5-early-lessons-from-rapid-high-availability-scaling-with-rails). Don't be concerned that Rails is mentioned, the concepts and principles are fundamental. Please read this and watch this material closely, it is quite important. As you read this please consider the anwers to these warmup questions:
     * What are some of the ways in which you know that its time to consider sharding or partitioniung your databases?
@@ -14,16 +13,18 @@ cat: scale
     * Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, which two ideas or concepts that you think are particularly interesting? Please make it clear whether it's a confusion or an insight.
     * <%= deliverable "Answer warmups in Latte" %>
 1. **Read:** Read these two valuable articles: [Sharding Your Database](http://www.craigkerstiens.com/2012/11/30/sharding-your-database/) and [Diagnosing Common Database Problems](https://www.infoq.com/articles/Diagnosing-Common-Java-Database-Performance-Hotspots)
-1. **Teams continue to work on nanoTwitter 0.5**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
-#### Interesting, but not required, reading
+##### Interesting, but not required, reading
 * [Building Scalable Databases: Pros and Cons of Sharding](http://www.25hoursaday.com/weblog/2009/01/16/BuildingScalableDatabasesProsAndConsOfVariousDatabaseShardingSchemes.aspx)
 * [The Basics Of Database Sharding](http://www.brentozar.com/archive/2013/05/the-basics-of-database-sharding/)
 * [Sharding your database](http://www.craigkerstiens.com/2012/11/30/sharding-your-database/)
 * [Gem for Sharding](https://github.com/thiagopradi/octopus)
 
+##### Ongoing work
+* **Teams continue to work on nanoTwitter 0.6**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
+
 #### Tech Presentations
-<%= callout("Presentatoin", " Fengzhencheng Zeng will present about Containerizing - Docker")%>
+<%= callout("Presentation", " Fengzhencheng Zeng will present about Containerizing - Docker")%>
 
 #### Notes and Discussion
 * How is nT 0.5 going? Any obstacles or questions?
