--- a/content/content/lectures/part3/35_scl_db.md.erb
+++ b/content/content/lectures/part3/35_scl_db.md.erb
@@ -12,6 +12,11 @@ cat: scale
     * Can you clarify why the reading/viewing says that you are screwed if you don't create an index early?
     * Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, which two ideas or concepts that you think are particularly interesting? Please make it clear whether it's a confusion or an insight.
     * <%= deliverable "Answer warmups in Latte" %>
+1. <%= pdfbadge %> <%= partbadge %> **Respond**: Review the Guest Lecturer Presentations from last week, Paul Kleppner and Andy Payne. Write a one page summary response to each (i.e. one page each), including:
+    * Speaker's name
+    * The major take aways that the speaker wanted you to get from the presentation
+    * Specific concepts, facts, ideas, thoughts from the presentation: What you already knew, what you learned, and what surprised you
+    * Rate it on a scale from 1 (terrible) to 10 (the best talk ever)
 1. **Read:** Read these two valuable articles: [Sharding Your Database](http://www.craigkerstiens.com/2012/11/30/sharding-your-database/) and [Diagnosing Common Database Problems](https://www.infoq.com/articles/Diagnosing-Common-Java-Database-Performance-Hotspots)
 
 ##### Interesting, but not required, reading
@@ -27,7 +32,7 @@ cat: scale
 <%= callout("Presentation", " Fengzhencheng Zeng will present about Containerizing - Docker")%>
 
 #### Notes and Discussion
-* How is nT 0.5 going? Any obstacles or questions?
+* How is nT 0.6 going? Any obstacles or questions?
 * What to do if "there's not a lot of coding for me to do?!"
   * How is your test coverage?
   * How is your API? Is it tested?
