--- a/content/content/lectures/part3/45_scl_queues.md.erb
+++ b/content/content/lectures/part3/45_scl_queues.md.erb
@@ -25,7 +25,7 @@ cat: scale
 * **Teams continue to work on nanoTwitter 0.7**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 #### Tech Presentation
-<%= callout("Presentation", " Xiangran Zhao on Full Text Search - ElasticSearch") %>
+<%= callout("Presentation", " Yang Shang	API Architectures other than REST - GraphQL") %>
 
 ### Scalability Pattern: Queueing
 
