--- a/content/content/lectures/part3/55_scl_logging.md.erb
+++ b/content/content/lectures/part3/55_scl_logging.md.erb
@@ -11,8 +11,8 @@ cat: scale
 * **Teams continue to work on nanoTwitter 0.8**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 #### Tech Presentation
+<%= callout("Tech Pres",  " Ari Carr	Database Sharding and Paritioning - ActiveRecord v6" ) %>
 
-<%= callout("Presentation", " Yang Shang	API Architectures other than REST - GraphQL") %>
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
