--- a/content/content/lectures/part3/60_scl_containers.md.erb
+++ b/content/content/lectures/part3/60_scl_containers.md.erb
@@ -7,7 +7,8 @@ cat: scale
 <%= homework_hdr %>
 
 #### Tech Presentation
+<%= callout("Tech Pres",  " Yirun Zhou on Global Scaling Architectures" ) %>
 
-<%= callout("Presentation", " Ziyu Liu on	Alternate ORMs - Sequel gem") %>
+
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
