--- a/content/content/lectures/part3/50_scl_soa.md.erb
+++ b/content/content/lectures/part3/50_scl_soa.md.erb
@@ -31,8 +31,8 @@ cat: scale
 
 
 #### Tech Presentation
+<%= callout("Presentation", " Ziyu Liu on	Alternate ORMs - Sequel gem") %>
 
-<%= callout("Presentation", " Chauncy Fan	on Push Processing and Web Sockets") %>
 
 #### SOA / Microservices / Monolith
 <img src="http://www.martinfowler.com/articles/microservices/images/sketch.png" width="500" align="right">
