--- a/content/content/lectures/part3/50_scl_soa.md.erb
+++ b/content/content/lectures/part3/50_scl_soa.md.erb
@@ -6,18 +6,18 @@ cat: scale
 ---
 <%= homework_hdr %>
 
-<img src="http://site.xavier.edu/polt/typewriters/underwood5small.jpg" align="right" width="128">
+<img src="https://site.xavier.edu/polt/typewriters/franklin.jpg" align="right" width="256">
 
-1. **Read** This classic paper by David Parnas about modularity: [Information distribution aspects of design methodology](http://repository.cmu.edu/cgi/viewcontent.cgi?article=2828&context=compsci). It's so old that you can see it was written with a typewriter. Can you imagine? As you read, think of *modules of a system* as meaning *microservice*.
+1. **Read**: Two important papers - no deliverable:
+    * This classic paper by David Parnas about modularity: [Information distribution aspects of design methodology](http://repository.cmu.edu/cgi/viewcontent.cgi?article=2828&context=compsci). It's so old that you can see it was written with a typewriter. Can you imagine? As you read, think of *modules of a system* as meaning *microservice*. 
+    * Also read "Introduction to Architecting Systems for Scale](http://lethain.com/introduction-to-architecting-systems-for-scale/)
 
-1. <%= pdfbadge %> <%= partbadge %> <%= timebadge %> **Read** This review article about [Microservices](http://martinfowler.com/articles/microservices.html). As you read, think about the following warmup questions:
+1. <%= pdfbadge %> <%= partbadge %> **Read** This review article about [Microservices](http://martinfowler.com/articles/microservices.html). As you read, think about the following warmup questions:
     * Modularity (a characteristic that comes in different guises) is a central concept in software design, Microservices are one way to achieve modularity. Think of some of the others?
     * What would you say is the central characteristic of a microservice that distinguishes it from an other kind of modularity.
     * Draw an analogy between the present paper and Parnas' paper above.
     * Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, which two ideas or concepts that you think are particularly interesting? Please make it clear whether it's a confusion or an insight.
     * <%= deliverable "Submit your responses as a pdf to Latte" %>
-1. **Read**: [Introduction to Architecting Systems for Scale](http://lethain.com/introduction-to-architecting-systems-for-scale/)
-1. **Teams continue to work on nanoTwitter 0.7**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 ##### Userful but not mandatory Reading
 * [Sinatra/Heroku Microservices](https://silkandspinach.net/2014/08/31/sinatraheroku-microservices/)
@@ -26,7 +26,6 @@ cat: scale
 * [Architecting Apps as MicroServices](https://blog.codeship.com/architecting-rails-apps-as-microservices/)
 
 ##### Ongoing work
-
 * <%= partbadge %> <%= zipbadge %> <%= teambadge %> **Complete nt 0.7 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 
