Checkpoint work to git

--- a/content/content/lectures/part3/50_scl_soa.md.erb
+++ b/content/content/lectures/part3/50_scl_soa.md.erb
@@ -9,7 +9,7 @@ cat: scale
 <img src="https://site.xavier.edu/polt/typewriters/franklin.jpg" align="right" width="256">
 
 1. **Read**: Two important papers - no deliverable:
-    * This classic paper by David Parnas about modularity: [Information distribution aspects of design methodology](http://repository.cmu.edu/cgi/viewcontent.cgi?article=2828&context=compsci). It's so old that you can see it was written with a typewriter. Can you imagine? As you read, think of *modules of a system* as meaning *microservice*. 
+    * This classic paper by David Parnas about modularity: [Information distribution aspects of design methodology](https://pdfs.semanticscholar.org/17f0/6e0b0f9d3abcf5771957246e8de847d39b49.pdf). It's so old that you can see it was written with a typewriter. Can you imagine? As you read, think of *modules of a system* as meaning *microservice*. 
     * Also read "Introduction to Architecting Systems for Scale](http://lethain.com/introduction-to-architecting-systems-for-scale/)
 
 1. <%= pdfbadge %> <%= partbadge %> **Read** This review article about [Microservices](http://martinfowler.com/articles/microservices.html). As you read, think about the following warmup questions:
