Checkpoint work to git

--- a/content/content/lectures/part3/42_continued.md.erb
+++ b/content/content/lectures/part3/42_continued.md.erb
@@ -9,3 +9,7 @@ cat: scale
 
 ##### Ongoing work
 * **Teams continue to work on nanoTwitter 0.7**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
+
+#### Tech Presentation
+<%= callout("Presentation", " Yang Shang, API Architectures other than REST - GraphQL") %>
+
