--- a/content/content/lectures/part3/45_scl_queues.md.erb
+++ b/content/content/lectures/part3/45_scl_queues.md.erb
@@ -23,7 +23,7 @@ cat: scale
 * <%= partbadge %> <%= zipbadge %> <%= teambadge %> **Complete nt 0.7 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### Tech Presentation
-<%= callout("Presentation", " Yang Shang	API Architectures other than REST - GraphQL") %>
+<%= callout("Presentation", " Ziyu Liu on	Alternate ORMs - Sequel gem") %>
 
 ### Scalability Pattern: Queueing
 
