--- a/content/content/lectures/part3/55_scl_logging.md.erb
+++ b/content/content/lectures/part3/55_scl_logging.md.erb
@@ -13,7 +13,7 @@ cat: scale
 * **Teams continue to work on nanoTwitter 0.8**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 #### Tech Presentation
-<%= callout("Tech Pres",  " Ari Carr	Database Sharding and Paritioning - ActiveRecord v6" ) %>
+<%= callout("Tech Pres",  " Yirun Zhou on Global Scaling Architectures" ) %>
 
 #### Monitoring and Logging
 * Similar, in fact a little hard to tell the difference
