Checkpoint work to git

--- a/content/content/lectures/part3/60_scl_containers.md.erb
+++ b/content/content/lectures/part3/60_scl_containers.md.erb
@@ -6,6 +6,9 @@ cat: scale
 ---
 <%= homework_hdr %>
 
+#### Tech Presentation
+<%= callout("Tech Pres",  " Yirun Zhou on Global Scaling Architectures" ) %>
+
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
