--- a/content/content/lectures/part3/55_scl_logging.md.erb
+++ b/content/content/lectures/part3/55_scl_logging.md.erb
@@ -10,7 +10,7 @@ cat: scale
 * Read: [Log Everything All The Time](http://highscalability.com/log-everything-all-time)
 
 ##### Ongoing work
-* **Teams continue to work on nanoTwitter 0.8**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
+* **Teams continue to work on nanoTwitter, heading into Nt 1.0!
 
 #### Monitoring and Logging
 * Similar, in fact a little hard to tell the difference
