--- a/content/content/lectures/part3/60_scl_containers.md.erb
+++ b/content/content/lectures/part3/60_scl_containers.md.erb
@@ -6,6 +6,8 @@ cat: scale
 ---
 <%= homework_hdr %>
 
+* **Teams continue to work on nanoTwitter, heading into Nt 1.0!
+
 #### Tech Presentation
 <%= callout("Tech Pres",  " Yirun Zhou on Global Scaling Architectures" ) %>
 
